2007-07-30  Eitan Isaacson  <eitan@ascender.com>

	* macaroon/playback/Makefile.am: Added utils.py.
	* macaroon/playback/keypress_mimic.py: Look for pre-existing
	active window before waiting.
	* macaroon/playback/playback_sequence.py: Small refactor to allow
	wait actions to override current state check.
	* macaroon/playback/utils.py: Function for finding active window.
	* macaroon/record/script_factory.py: Silly exception for
	<Shift>Tab in sequnce level 2 recording.

2007-07-30  Willie Walker  <william.walker@sun.com>

        * macaraoon/playback/keypress_mimic.py: add "interval" parameter
        to TypeAction constructor and then use it in _doType as a means
        to allow overriding of keystroke_interval.

2007-07-29  Eitan Isaacson  <eitan@ascender.com>

	* macaroon/playback/keypress_mimic.py: Added English strings to
	represent each action.
	* macaroon/playback/playback_sequence.py: Sequence object now
	emits a signal on each complete step.
	* macaroon/record/main.py: Added progress bar with useful
	messages on script playback.
	* macaroon/record/script_factory.py: Key names are now in the
	actual constructor for key press and release actions.

2007-07-27  Eitan Isaacson  <eitan@ascender.com>

	* macaroon/playback/keypress_mimic.py: Added smarter sequence
	steps for key combos and string typing.
	* macaroon/playback/playback_sequence.py: Sequence steps now
	inform the sequence object that they finished with a signal. Added
	event caching in the sequence class so a focus event could be
	anticipated by the sequence step before it.
	* macaroon/record/about.py: s/Accerciser/Macaroon/
	* macaroon/record/main.py: Added playback capability, not
	perfect. Added capability to switch between "level 1" and "level
	2" recording, level 1 means recording each descreet 	
	key press and release, level 2 tries to make compound steps out of
	key presses.
	* macaroon/record/script_factory.py: Added "level 2" scripts.

2007-07-27  Eitan Isaacson  <eitan@ascender.com>
