@@ -1,5 +1,8 @@
 2007-07-30  Eitan Isaacson  <eitan@ascender.com>
 
+	* macaroon/playback/keypress_mimic.py: Renamed press_min to min_delta.
+	Gave it a default of 50ms.
+	
 	* macaroon/playback/Makefile.am: Added utils.py.
 	* macaroon/playback/keypress_mimic.py: Look for pre-existing
 	active window before waiting.
